[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build.targets.sdist]
include = ["src/tfdocs"]

[tool.hatch.build.targets.wheel]
packages = ["src/tfdocs"]

[tool.hatch.build.target.sdist.force-include]
"src/cli.py" = "src/tfdocs/cli.py"

[project.scripts]
tfdocs = "tfdocs.__main__:main"

[project]
name = "tfdocs"
version = "0.1.0"
authors = [
  { name="Vajeen Karunathilaka", email="vajeen@gmail.com" },
]
description = "Documentation generator for Terraform modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vajeen/tfdoc"
Issues = "https://github.com/vajeen/tfdoc/issues"
